Fixed modal z-index issue with multipane.

--- a/public/src/stylesheets/style.styl
+++ b/public/src/stylesheets/style.styl
@@ -86,6 +86,13 @@
 .fixed[class*=hint--]
   position: fixed
 
+// -- multipane --
+
+// this fixes a modal z-index issue
+.multipane
+  > div
+    z-index: auto
+
 // -- markdown --
 
 .marked
